# agent-of-empires

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
contrib/openclaw-skill/: SKILL.md
docs/cli/: reference.md
docs/guides/: configuration.md  sandbox.md
src/: agents.rs  main.rs
src/cli/: add.rs  definition.rs  hook_handler.rs  mod.rs  serve.rs  session.rs
src/hooks/: mod.rs
src/server/: auth.rs  login.rs  mod.rs
src/session/: builder.rs  config.rs  container_config.rs  groups.rs  instance.rs  mod.rs  profile_config.rs
src/tmux/: mod.rs  status_detection.rs
src/tui/: app.rs  mod.rs  styles.rs
src/tui/dialogs/: hooks_install.rs  rename.rs
src/tui/dialogs/new_session/: group_input.rs  mod.rs  render.rs
src/tui/home/: input.rs  mod.rs  operations.rs  render.rs  tests.rs
src/tui/settings/: fields.rs  input.rs
tests/e2e/: cli.rs
web/src/: App.tsx
web/src/components/: LoginPage.tsx  TerminalSettings.tsx  WorkspaceSidebar.tsx
web/src/hooks/: useTerminal.ts  useWebSettings.ts
web/src/lib/: api.ts
web/tests/: pinch-zoom-desktop.spec.ts  pinch-zoom.spec.ts
web/tests/helpers/: terminal-mocks.ts
work/mouse-click-support/: code-research.md
xtask/: Cargo.toml
xtask/src/: main.rs
